# otdrparser

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  example-parse.json  example-parse2.json  example.csv  otdrparser.py  pylintrc  pyproject.toml
tests/: 1310_0001.sor  1310_0002.sor  1310_0045.sor  1310_0046.sor  Makefile  README  issue14.sor  issue15.sor  issue15b.sor  issue9.sor  otdr1.sor  otdr2.sor  otdr3.sor  otdr4.sor  otdr5.sor  otdr6.sor  otdr7.sor  test.py  tests.py
tools/: README.md  sor2csv.py  sor2json.py  sor2md.py  sor2png.py  sor2yaml.py
