[tool.poetry]
name = "otdrparser"
version = "0.1.1"
description = "Python library for parsing OTDR files in Telcordia SR-4731 Version 2 format"
authors = ["Markus Juenemann <markus@juenemann.net>"]
license = "BSD 2-Clause License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
